Colaboratory kullanılarak oluşturuldu

--- a/HarmfulURLCHATGBT.ipynb
+++ b/HarmfulURLCHATGBT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1i6OgIUaqdqItDjmU51zQZg_yQpVpszmU",
-      "authorship_tag": "ABX9TyO0+OEbKfTLTlAsTKk/BYuC",
+      "authorship_tag": "ABX9TyO6SyRBrAmf0Q361rIswKo6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -368,7 +368,7 @@
       "source": [
         "print(\"Model Doğruluğu:\", accuracy)\n",
         "print(\"Sınıflandırma Raporu:\")\n",
-        "print(classification_report(y_test, y_pred, target_names=['benign', 'phishing']))"
+        "print(classification_report(y_test, y_pred, target_names=['benign', 'phishing','defacement','malware']))"
       ],
       "metadata": {
         "id": "jy52oLhtrlLm"
