Colaboratory kullanılarak oluşturuldu

--- a/LinearRegressionMultipleVariable.ipynb
+++ b/LinearRegressionMultipleVariable.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1jxqAbimKlJYsnXO0rtNscKkxOF_Dx818",
-      "authorship_tag": "ABX9TyPNNx4vdK0CmxjtYXREQWzw",
+      "authorship_tag": "ABX9TyPEef+1tiy2PqdVJbxXUs3T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "oZeL4w_yGQiD"
       },
@@ -50,12 +50,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 237
         },
         "id": "6nwSqLWiHC-5",
-        "outputId": "94acbe21-923d-4467-e29d-082e8b012aae"
+        "outputId": "7a1f5dd5-af3d-46d4-fa40-90017fd9eb6c"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -71,7 +71,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f84e264e-e310-445f-9ba2-ab459f57a260\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d0a6a49f-5e5b-4779-9fc9-3ce2fd8861d0\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -145,7 +145,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f84e264e-e310-445f-9ba2-ab459f57a260')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d0a6a49f-5e5b-4779-9fc9-3ce2fd8861d0')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -197,12 +197,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f84e264e-e310-445f-9ba2-ab459f57a260 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d0a6a49f-5e5b-4779-9fc9-3ce2fd8861d0 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f84e264e-e310-445f-9ba2-ab459f57a260');\n",
+              "        const element = document.querySelector('#df-d0a6a49f-5e5b-4779-9fc9-3ce2fd8861d0');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -222,8 +222,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4ed28455-3d1a-432b-92bb-64276eab96e8\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4ed28455-3d1a-432b-92bb-64276eab96e8')\"\n",
+              "<div id=\"df-f5c04c1d-bd82-47fd-9aaa-deaaf03e0da4\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f5c04c1d-bd82-47fd-9aaa-deaaf03e0da4')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -274,7 +274,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4ed28455-3d1a-432b-92bb-64276eab96e8 button');\n",
+              "        document.querySelector('#df-f5c04c1d-bd82-47fd-9aaa-deaaf03e0da4 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -285,7 +285,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -301,7 +301,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LVycUNOUHnEl",
-        "outputId": "fc237fee-b737-4e41-d4f4-0921d9f734cb"
+        "outputId": "c112a224-f928-4bfc-d6ab-31eb5e6a90dd"
       },
       "execution_count": 6,
       "outputs": [
@@ -326,10 +326,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 237
         },
         "id": "4OnrVoJyIc2s",
-        "outputId": "80dff22a-db37-4e17-c883-266aca31e047"
+        "outputId": "cefdd297-3cb0-4d90-c028-e72b0c320246"
       },
       "execution_count": 7,
       "outputs": [
@@ -347,7 +347,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6b6d8619-d7d6-4aba-ac4d-d393941e49b0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6c91eace-fe29-499f-b38e-6356c91b483e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -421,7 +421,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b6d8619-d7d6-4aba-ac4d-d393941e49b0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6c91eace-fe29-499f-b38e-6356c91b483e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -473,12 +473,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6b6d8619-d7d6-4aba-ac4d-d393941e49b0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6c91eace-fe29-499f-b38e-6356c91b483e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6b6d8619-d7d6-4aba-ac4d-d393941e49b0');\n",
+              "        const element = document.querySelector('#df-6c91eace-fe29-499f-b38e-6356c91b483e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -498,8 +498,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0265eab0-91fa-4cbe-b0d6-5b01a183edab\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0265eab0-91fa-4cbe-b0d6-5b01a183edab')\"\n",
+              "<div id=\"df-6002e1eb-d082-4722-9656-a7a013f6b6a3\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6002e1eb-d082-4722-9656-a7a013f6b6a3')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -550,7 +550,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0265eab0-91fa-4cbe-b0d6-5b01a183edab button');\n",
+              "        document.querySelector('#df-6002e1eb-d082-4722-9656-a7a013f6b6a3 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -593,12 +593,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 75
+          "height": 74
         },
         "id": "nZp7MikbI8YM",
-        "outputId": "d343098a-dcb2-408c-82cd-c1939df929c8"
+        "outputId": "c52e8088-6fa4-498e-b5c0-0c67edfcdbe8"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -611,7 +611,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -626,7 +626,76 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xpvIFgSQJ62-",
-        "outputId": "57a7ab61-8aac-43af-d8c4-7fb22aa9e7fd"
+        "outputId": "31a91cc9-f230-44da-93c7-e3dae7516eb4"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([628978.52142194])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle"
+      ],
+      "metadata": {
+        "id": "57Y51au4pzu9"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('model_pickle','wb') as f:\n",
+        "  pickle.dump(reg,f)"
+      ],
+      "metadata": {
+        "id": "5wbG1DlYp66B"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('/content/drive/MyDrive/YapayZeka/model_pickle','rb') as f:\n",
+        "  model=pickle.load(f)"
+      ],
+      "metadata": {
+        "id": "XQent3GbqhTk"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.predict(X_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oVMaSUI7rOE_",
+        "outputId": "caa5cb2d-3624-4f46-cef2-62cbc87df54f"
       },
       "execution_count": 16,
       "outputs": [
@@ -647,6 +716,77 @@
           },
           "metadata": {},
           "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import joblib"
+      ],
+      "metadata": {
+        "id": "3GyHe4b8r1GQ"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "joblib.dump(model,'/content/drive/MyDrive/YapayZeka/model_joblib')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QlZbbkOcsT5b",
+        "outputId": "01fe5be2-5d3c-4e72-b950-5ed083b0970d"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['/content/drive/MyDrive/YapayZeka/model_joblib']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.predict(X_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8OUgu8D4sfU3",
+        "outputId": "7d69b13a-097f-4f26-ec21-c9c8b9073d0d"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([628978.52142194])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     }
